feat: mock api login and cookies

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-VITE_API_URL="https://api.example.com"
+COOKIE_SECRET_PASSWORD="your_cookie_secret_password"
+VITE_BASE_API_URL="https://api.example.com"
