--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -26,54 +26,54 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-router/node": "^7.6.1",
-    "@react-router/serve": "^7.6.1",
-    "@tanstack/react-query": "^5.79.0",
-    "@tanstack/react-query-devtools": "^5.79.0",
+    "@react-router/node": "^7.8.0",
+    "@react-router/serve": "^7.8.0",
+    "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "@tanstack/react-table": "^8.21.3",
-    "axios": "^1.9.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "isbot": "^5.1.28",
-    "lucide-react": "^0.487.0",
-    "react": "^19.1.0",
-    "react-day-picker": "9.6.6",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.57.0",
+    "isbot": "^5.1.29",
+    "lucide-react": "^0.539.0",
+    "react": "^19.1.1",
+    "react-day-picker": "^9.8.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
-    "react-router": "^7.6.1",
-    "tailwind-merge": "^3.3.0",
-    "tw-animate-css": "^1.3.3",
-    "zod": "^3.25.47"
+    "react-router": "^7.8.0",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.6",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@react-router/dev": "^7.6.1",
-    "@tailwindcss/vite": "^4.1.8",
-    "@tanstack/eslint-plugin-query": "^5.78.0",
-    "@types/node": "^20.17.57",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
-    "@typescript-eslint/eslint-plugin": "^8.33.0",
-    "@typescript-eslint/parser": "^8.33.0",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.31.0",
+    "@eslint/js": "^9.32.0",
+    "@react-router/dev": "^7.8.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@types/node": "^20.19.9",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^4.1.8",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.0",
-    "vite": "^6.3.5",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.0",
+    "vite": "^7.1.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "lint-staged": {
