--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,5 @@
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "endOfLine": "crlf"
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
